Skip to content

WMA2 mono radio stream leads to crashes

mms://170.155.145.40/AM_Provincia

This is reproducible on Windows (DirectSound) and OS X/iOS (AudioUnit, AudioQueue), but surprisingly not with PulseAudio (adummy is ok, too). Due to bad timing, we resample this source a lot, the resampler complains "Cannot resample: Input and output data arrays overlap."

It terminates here:

    frame [#2](https://code.videolan.org/videolan/vlc/-/issues/2): 0x00007fff8a854b53 libsystem_c.dylib`abort + 129
    frame [#3](https://code.videolan.org/videolan/vlc/-/issues/3): 0x00007fff9346ae06 libsystem_malloc.dylib`szone_error + 625
    frame [#4](https://code.videolan.org/videolan/vlc/-/issues/4): 0x00007fff934625c8 libsystem_malloc.dylib`small_free_list_remove_ptr + 154
    frame [#5](https://code.videolan.org/videolan/vlc/-/issues/5): 0x00007fff934612bf libsystem_malloc.dylib`szone_free_definite_size + 1856
    frame [#6](https://code.videolan.org/videolan/vlc/-/issues/6): 0x000000010ff51cba libavcodec_plugin.dylib`av_buffer_pool_uninit [inlined] buffer_pool_free(pool=0x00000001003a40e0) + 50 at buffer.c:244
    frame [#7](https://code.videolan.org/videolan/vlc/-/issues/7): 0x000000010ff51c88 libavcodec_plugin.dylib`av_buffer_pool_uninit(ppool=<unavailable>) + 40 at buffer.c:261
    frame [#8](https://code.videolan.org/videolan/vlc/-/issues/8): 0x000000010fbd2264 libavcodec_plugin.dylib`avcodec_default_get_buffer2(avctx=<unavailable>, frame=0x000000010886f160, flags=<unavailable>) + 692 at utils.c:579
    frame [#9](https://code.videolan.org/videolan/vlc/-/issues/9): 0x000000010fbd1d91 libavcodec_plugin.dylib`ff_get_buffer(avctx=<unavailable>, frame=0x000000010886f160, flags=0) + 1249 at utils.c:1018
    frame [#10](https://code.videolan.org/videolan/vlc/-/issues/10): 0x000000010fc8ba05 libavcodec_plugin.dylib`wma_decode_superframe(avctx=0x0000000100891e00, data=0x000000010886f160, got_frame_ptr=0x0000000110cb5bd0, avpkt=<unavailable>) + 261 at wmadec.c:872
    frame [#11](https://code.videolan.org/videolan/vlc/-/issues/11): 0x000000010fbcf57e libavcodec_plugin.dylib`avcodec_decode_audio4(avctx=<unavailable>, frame=0x000000010886f160, got_frame_ptr=0x0000000110cb5d84, avpkt=<unavailable>) + 318 at utils.c:2517
    frame [#12](https://code.videolan.org/videolan/vlc/-/issues/12): 0x000000010f699dcc libavcodec_plugin.dylib`DecodeAudio(p_dec=0x00000001008918b8, pp_block=0x0000000110cb5df0) + 492 at audio.c:360
    frame [#13](https://code.videolan.org/videolan/vlc/-/issues/13): 0x000000010004daea libvlccore.8.dylib`DecoderDecodeAudio(p_dec=0x00000001008918b8, p_block=0x00000001010c7000) + 74 at decoder.c:1183

This is a regression from 2.1.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information