darwin aout modules: fix mono playback (refs #13826)

This matches the ALSA implementation now.